--- a/index.html
+++ b/index.html
@@ -1,20 +1,41 @@
-<!doctype HTML>
+<!doctype html>
 <html>
-<!-- A-Frameを読み込み -->
-<script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
-<!-- AR.jsを読み込み -->
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
+    <head>
+        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+    </head>
 
-<body style="margin : 0px; overflow: hidden">
-  <!-- AR.jsのデバックとA-FrameのVRボタンを非表示 -->
-  <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
-    <!-- a-markerのtypeにpatternを設定, 作ったpattファイルをurlにを指定 -->
-    <a-marker type="pattern" url="pattern-marker.patt">
-      <!-- 赤い立方体を表示 -->
-      <a-box position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red"></a-box>
-    </a-marker>
-    <a-entity camera></a-entity>
-  </a-scene>
-</body>
+    <body style="margin: 0; overflow: hidden;">
+        <a-scene
+            vr-mode-ui="enabled: false;"
+            loading-screen="enabled: false;"
+            arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+            id="scene"
+            embedded
+            gesture-detector
+        >
+            <a-marker
+                id="animated-marker"
+                type="pattern"
+                preset="custom"
+                url="assets/marker.patt"
+                raycaster="objects: .clickable"
+                emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;"
+                id="markerA"
+            >
+                <a-image
+                    src="assets/asset.jpeg"
+                    scale="1 1 1"
+                    class="clickable"
+                    rotation="-90 0 0"
+                    gesture-handler
+                ></a-image>
+            </a-marker>
 
+            <a-entity camera></a-entity>
+        </a-scene>
+    </body>
 </html>
