--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a-scene
             vr-mode-ui="enabled: false;"
             loading-screen="enabled: false;"
-            arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true;"
+            arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
             id="scene"
             embedded
             gesture-detector
@@ -27,7 +27,7 @@
                 id="markerA"
             >
                 <a-image
-                    src="assets/asset.jpeg"
+                    src="assets/asset.png"
                     scale="1 1 1"
                     class="clickable"
                     rotation="-90 0 0"
