--- a/index.html
+++ b/index.html
@@ -16,16 +16,7 @@
             embedded
             gesture-detector
         >
-            <a-marker
-                id="animated-marker"
-                type="pattern"
-                preset="custom"
-                url="assets/marker.patt"
-                raycaster="objects: .clickable"
-                emitevents="true"
-                cursor="fuse: false; rayOrigin: mouse;"
-                id="markerA"
-            >
+            <a-marker preset="hiro">
                 <a-image
                     src="assets/asset.png"
                     scale="1 1 1"
